# Crashlab_ggobugi

./: asdf.pgm  asdf.yaml  c_map.pgm  c_map.xcf  c_map.yaml  flfl.pgm  frames_2024-12-07_21.54.10.gv  frames_2024-12-07_22.00.26.gv  frames_2024-12-07_22.14.53.gv  frames_2024-12-07_22.20.00.gv  frames_2024-12-07_23.07.18.gv  frames_2024-12-11_00.27.11.gv  frames_2024-12-13_01.05.30.gv  frames_2024-12-13_01.35.44.gv  frames_2024-12-15_03.08.24.gv  frames_2024-12-17_23.32.01.gv  frames_2024-12-17_23.36.22.gv  frames_2024-12-18_00.24.32.gv  frames_2024-12-19_05.14.35.gv
crash_motor/: CMakeLists.txt  package.xml
crash_motor/include/crash_motor/: motor_node.hpp
crash_motor/src/: motor_test_node.cpp  motor_test_util.cpp  pid_check_node.cpp  pid_gain_publisher.cpp  teleop_node.cpp  test_running_node.cpp
install/: local_setup.sh  setup.sh
install/coordination/lib/coordination/: publisher  subscriber
install/coordination/share/coordination/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/crash_nav2/lib/crash_nav2/: navigate_controller  odom_publisher  pid_check
install/crash_nav2/share/crash_nav2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/crash_nav2/share/crash_nav2/cmake/: crash_nav2Config-version.cmake  crash_nav2Config.cmake
install/crash_nav2/share/crash_nav2/config/: mapper_params_online_async.yaml
install/crash_nav2/share/crash_nav2/environment/: ament_prefix_path.dsv  path.dsv
install/crash_nav2/share/crash_nav2/launch/: navigation.launch.py  navigation_rviz.launch.py  online_async_launch.py  rviz_launch.py
install/crash_nav2/share/crash_nav2/map/: 112_map.pgm  112_map.yaml  112_map_serial.data  112_map_serial.posegraph  bad_map.pgm  bad_map.yaml  bad_map_serial.data  bad_map_serial.posegraph  map.pgm  map.yaml  map_serial.data  map_serial.posegraph  testmap_save.pgm  testmap_save.yaml  testmap_serial.data  testmap_serial.posegraph
install/crash_nav2/share/crash_nav2/param/: crash_params.yaml
install/ggobuk_bringup/share/ggobuk_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/json_data/lib/json_data/: publisher
install/json_data/share/json_data/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  receive_data.json
install/nav_bringup/share/nav_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nav_motor_pkg/lib/nav_motor_pkg/: motor_run_node  pid_gain_publisher  test_running_node
install/nav_motor_pkg/share/nav_motor_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/other_motor_pkg/: cap_motor_node
install/other_motor_pkg/share/other_motor_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tutorial_ros2_motor/lib/tutorial_ros2_motor/: motor_node  teleop_node
install/tutorial_ros2_motor/share/tutorial_ros2_motor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/untitled_description/share/untitled_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ydlidar_ros2_driver/lib/ydlidar_ros2_driver/: ydlidar_ros2_driver_client  ydlidar_ros2_driver_node
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ydlidar_sdk/share/YDLIDAR_SDK/: FindYDLIDAR_SDK.cmake
install/ydlidar_sdk/share/ydlidar_sdk/: package.sh
log/: latest_build
src/coordination/: package.xml  setup.py
src/coordination/coordination/: publisher.py  subscriber.py
src/crash_nav2/: CMakeLists.txt  setup.cfg  setup.py
src/crash_nav2/config/: mapper_params_online_async.yaml
src/crash_nav2/launch/: navigation.launch.py  navigation_rviz.launch.py  online_async_launch.py
src/crash_nav2/map/: 112_map.pgm  112_map.yaml  112_map_serial.data  bad_map.pgm  bad_map.yaml  bad_map_serial.data  map.pgm  map.yaml  map_serial.data  testmap_save.yaml
src/crash_nav2/param/: crash_params.yaml
src/crash_nav2/src/: odom_publisher.cpp
src/ggobuk_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ggobuk_bringup/launch/: bringup.launch.py  navigation.launch.py  online_async.launch.py
src/ggobuk_bringup/map/: testmap_save.pgm  testmap_serial.data
src/ggobuk_bringup/params/: nav2_params.yaml
src/json_data/: package.xml  receive_data.json  setup.cfg  setup.py
src/json_data/json_data/: pub.py
src/nav_motor_pkg/: CMakeLists.txt  package.xml
src/nav_motor_pkg/config/: motor_parameters.txt
src/nav_motor_pkg/include/nav_motor_pkg/: motor_node.hpp
src/nav_motor_pkg/src/: motor_run.cpp  motor_util.cpp  pid_gain_publisher.cpp  test_running_node.cpp
src/other_motor_pkg/: CMakeLists.txt  package.xml
src/other_motor_pkg/src/: cap_motor_node.cpp
src/untitled_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/untitled_description/config/: mapper_params_online_async.yaml  nav2_params.yaml  rjrj.rviz
src/untitled_description/launch/: display.launch.py  dynamic_transform_publisher.py  gazebo.launch.py  navigation.launch.py  rviz.launch.py  sim.launch.py
src/untitled_description/meshes/: Caster_Wheel_1.stl  Caster_Wheel_out_1.stl  Left_Wheel_1.stl  Right_Wheel_1.stl  base_link.stl
src/untitled_description/scripts/: zone_publisher.py  zone_subscriber.py
src/untitled_description/untitled_description/: task_navigator.py
src/untitled_description/urdf/: gazebo.xacro  lidar.xacro  materials.xacro  untitled.gazebo  untitled.trans  untitled.xacro
src/untitled_description/world/: home.world  house.world  robot.world
(+72 files in other folders)
